cfn_benchmark/cfn_templates/Jaylakhani37__AWS_CloudFormation_Templates/Wordpress_in_linux/WP_ubuntu/WP_ubuntu.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create a WordPress website stack

Parameters:
  VpcId:
    Description: The ID of the VPC
    Type: AWS::EC2::VPC::Id
  SubnetA:
    Description: The ID of Subnet A
    Type: AWS::EC2::Subnet::Id
  SubnetB:
    Description: The ID of Subnet B
    Type: AWS::EC2::Subnet::Id
  DBName:
    Description: The name of the WordPress database
    Type: String
    Default: wordpress
  DBIdentifier:
    Description: The name of the WordPress database
    Type: String
    Default: wordpress-id
  DBUsername:
    Description: The username for the WordPress database
    Type: String
    Default: admin
  DBPassword:
    Description: The password for the WordPress database
    Type: String
    NoEcho: true
    MinLength: 8
    MaxLength: 41
    ConstraintDescription: Password must be between 8 and 41 characters long
  DBSubnetGrp:
    Description: DB Subnet Group
    Type: String
    Default: wordpress-subnet-group

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: !Ref DBSubnetGrp
      DBSubnetGroupDescription: Subnet group for WordPress RDS
      SubnetIds:
        - !Ref SubnetA
        - !Ref SubnetB
    UpdateReplacePolicy: Retain
    DeletionPolicy: Delete

  DBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      Engine: mysql
      DBInstanceIdentifier: !Ref DBIdentifier
      DBName: !Ref DBName
      AllocatedStorage: 20
      DBInstanceClass: db.t2.micro
      EngineVersion: '8.0.32'
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref SecurityGroup
      BackupRetentionPeriod: 7
    UpdateReplacePolicy: Retain
    DeletionPolicy: Delete

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-007855ac798b5175e
      KeyName: my one key
      SecurityGroupIds:
        - !Ref SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo su
          apt-get update -y
          apt install php libapache2-mod-php php-mysql php-redis -y
          apt install php-curl php-gd php-mbstring php-xml php-xmlrpc php-soap php-intl php-zip -y
          apt install apache2 -y
          apt install mysql-server -y
          systemctl enable apache2 mysql
          wget -c http://wordpress.org/latest.tar.gz
          tar -xzvf latest.tar.gz -C /var/www/html/
          chown -R www-data:www-data /var/www/html/wordpress
          chmod -R 755 /var/www/html/wordpress
Outputs:
  WordPressURL:
    Description: The URL of the WordPress website
    Value: !Sub "http://${EC2Instance.PublicIp}/wordpress"
